# octo-sandbox

./: .adr-config.yaml  .dockerignore  .env.example  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  Makefile  README.md  README.zh.md  config.default.yaml  config.yaml  docker-compose.yml  github.com  package-lock.json  package.json  phase3-verification-log.txt  pyrightconfig.json
crates/eaasp-claw-code-runtime/: Cargo.toml  build.rs
crates/eaasp-claw-code-runtime/src/: adapter.rs  lib.rs  main.rs  service.rs  ultra_worker.rs
crates/eaasp-goose-runtime/: .dockerignore  Cargo.toml  Dockerfile  build.rs
crates/eaasp-goose-runtime/src/: goose_adapter.rs  lib.rs  main.rs  service.rs
crates/eaasp-goose-runtime/tests/: adapter_test.rs  send_integration_test.rs  smoke_test.rs
crates/eaasp-scoped-hook-mcp/: Cargo.toml
crates/eaasp-scoped-hook-mcp/src/: lib.rs  main.rs
crates/eaasp-scoped-hook-mcp/tests/: smoke_test.rs
crates/grid-cli/: Cargo.toml
crates/grid-cli/src/: lib.rs  main.rs  studio_main.rs
crates/grid-desktop/: Cargo.toml
crates/grid-desktop/src/: server.rs
crates/grid-hook-bridge/: Cargo.toml  build.rs
crates/grid-hook-bridge/src/: grpc_bridge.rs  in_process.rs  lib.rs  server.rs  traits.rs
crates/grid-runtime/: Cargo.toml  Dockerfile  build.rs
crates/grid-runtime/src/: config.rs  contract.rs  harness.rs  lib.rs  main.rs  scoped_hook_handler.rs  service.rs  telemetry.rs
crates/grid-runtime/tests/: grpc_integration.rs  harness_payload_integration.rs  scoped_hook_wiring_integration.rs
crates/octo-cli/: Cargo.toml
crates/octo-cli/src/: lib.rs  main.rs
crates/octo-desktop/: Cargo.toml  tauri.conf.json
crates/octo-desktop/icons/: icon.icns
crates/octo-desktop/src/: commands.rs  lib.rs  main.rs  server.rs  tray.rs
crates/octo-engine/: Cargo.toml
crates/octo-engine/src/: commands.rs  lib.rs  root.rs
crates/octo-engine/tests/: agent_events.rs  agent_events_serde.rs  agent_loop_config.rs  agent_loop_steps.rs  assessment_context_degradation.rs  assessment_estop_integration.rs  assessment_memory_consistency.rs  assessment_provider_failover.rs  assessment_security_adversarial.rs  assessment_text_tool_recovery.rs  auth_config_test.rs  auth_middleware_test.rs  auto_compact.rs  auto_memory.rs  byzantine_consensus.rs  collaboration.rs  compaction_pipeline.rs  content_block.rs  context_fork.rs  context_manager.rs  coordinator_mode.rs  coordinator_tool_filter.rs  deferred_action.rs  error_not_persisted.rs  harness_basic.rs  harness_integration.rs  hook_failure_mode.rs  max_tokens_continuation.rs  mcp_annotations.rs  multi_session.rs  nodejs_runtime.rs  observation_masking.rs  offline_sync.rs  provider_pipeline.rs  safety_pipeline.rs  sandbox_router_test.rs  sandbox_subprocess_test.rs  sandbox_test.rs  session_isolation.rs  shell_runtime.rs  (+30 more)
crates/octo-eval/: Cargo.toml  eval.benchmark.toml
crates/octo-eval/datasets/: EVAL_TASKS_SPEC.md  gaia_sample.jsonl  octo_context.jsonl  octo_platform_security.jsonl  octo_provider_resilience.jsonl  octo_resilience.jsonl  octo_security.jsonl  octo_tool_call.jsonl  swe_bench_lite.jsonl  tau_bench_retail.jsonl  terminal_bench.jsonl
crates/octo-eval/src/: benchmark.rs  comparison.rs  config.rs  faulty_provider.rs  lib.rs  main.rs  mock_provider.rs  model.rs  recorder.rs  reporter.rs  run_store.rs  runner.rs  score.rs  scorer.rs  task.rs
crates/octo-eval/tests/: eval_integration.rs
crates/octo-platform-server/: Cargo.toml
crates/octo-platform-server/src/: agent_pool.rs  lib.rs  main.rs  user_runtime.rs  ws.rs
crates/octo-platform-server/tests/: test_agent_pool.rs  test_user_runtime.rs
crates/octo-server/: Cargo.toml
crates/octo-server/src/: config.rs  main.rs  router.rs  session.rs  state.rs  ws.rs
crates/octo-server/tests/: api_audit_enhance.rs  api_config_update.rs  api_context.rs  api_health.rs  api_hooks.rs  api_knowledge_graph.rs  api_mcp_scheduler.rs  api_metering.rs  api_sandbox.rs  api_secrets.rs  api_security.rs  api_security_policy.rs  api_session_memory.rs  api_stub_resolve.rs  ws_multi_session.rs
lang/hermes-runtime-python/: pyproject.toml
lang/hermes-runtime-python/tests/: test_adapter.py  test_governance_plugin.py  test_mcp_bridge.py  test_session.py  test_v2_session_payload.py
lang/nanobot-runtime-python/: Makefile  pyproject.toml
lang/nanobot-runtime-python/tests/: test_mcp_client.py  test_provider.py  test_skill_extraction_e2e.py  test_smoke.py
lang/pydantic-ai-runtime-python/: pyproject.toml
lang/pydantic-ai-runtime-python/tests/: test_provider.py  test_scaffold.py  test_session.py
tests/contract/: .gitignore  README.md  __init__.py  conftest.py  pyproject.toml  test_harness_smoke.py
tests/contract/cases/: __init__.py  test_pre_phase3_skill_compat.py  test_tool_conflict_resolution.py  test_tool_namespace_enforcement.py
tests/contract/contract_v1/: CHANGELOG.md  __init__.py  test_e2e_smoke.py  test_event_type.py  test_hook_envelope.py  test_mcp_bridge.py  test_proto_shape.py  test_skill_workflow.py
tests/contract/harness/: __init__.py  assertions.py  hook_probe.py  mock_openai_server.py  runtime_launcher.py  skill_namespace.py
tools/eaasp-cli-v2/: pyproject.toml
tools/eaasp-cli-v2/tests/: conftest.py  test_client.py  test_cmd_memory.py  test_cmd_policy.py  test_cmd_session.py  test_cmd_session_chunk_types.py  test_cmd_session_events.py  test_cmd_skill.py  test_config.py  test_session_list_deferred.py
tools/eaasp-governance/: .gitignore  pyproject.toml
tools/eaasp-governance/config/: intents.yaml
tools/eaasp-governance/tests/: test_api.py  test_compiler.py  test_deferred.py
tools/eaasp-l2-memory-engine/: README.md  pyproject.toml
tools/eaasp-l2-memory-engine/tests/: test_api.py  test_event_embedding.py  test_index.py  test_mcp_server.py  test_s2t3_tool_completion.py  test_s2t4_state_machine.py
tools/eaasp-l3-governance/: pyproject.toml
tools/eaasp-l4-orchestration/: pyproject.toml
tools/eaasp-mcp-orchestrator/: Cargo.toml
tools/eaasp-session-manager/: pyproject.toml
tools/eaasp-skill-registry/: Cargo.toml
tools/mock-scada/: pyproject.toml
(+1174 files in other folders)
