[package]
name = "eaasp-scoped-hook-mcp"
edition.workspace = true
version.workspace = true
description = "EAASP wrapping MCP middleware — intercepts tools/call and dispatches ADR-V2-006 scoped hooks"

[dependencies]
tokio = { version = "1", features = ["full", "process", "io-util"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tracing = "0.1"
# NOTE: rmcp + eaasp-skill-registry deps intentionally omitted at T1 (scaffold only).
# Wiring of tools/call interception + SKILL.md envelope dispatch lands in T3.
