[package]
name = "grid-cli"
edition.workspace = true
version.workspace = true
description = "Grid CLI - Local CLI for interacting with Grid agents"

[lib]
name = "grid_cli"
path = "src/lib.rs"

[[bin]]
name = "grid"
path = "src/main.rs"

[[bin]]
name = "grid-studio"
path = "src/studio_main.rs"
required-features = ["studio"]

[features]
default = []
# Studio mode: TUI + Dashboard (adds ratatui, crossterm, axum, tower-http)
studio = [
    "dep:ratatui",
    "dep:crossterm",
    "dep:axum",
    "dep:tower",
    "dep:tower-http",
    "dep:ignore",
    "dep:unicode-width",
    "dep:dirs",
]
# Enable all heavy features (WASM, Docker, PDF) for production builds
full = ["grid-engine/full", "studio"]
dashboard-tls = ["studio", "axum-server", "rcgen"]

[dependencies]
# Internal crates
grid-types = { workspace = true }
grid-engine = { workspace = true }
grid-sandbox = { workspace = true }
grid-eval = { path = "../grid-eval" }

# Async runtime
tokio = { workspace = true, features = ["full"] }
futures-util = { workspace = true }
async-trait = { workspace = true }

# CLI parsing
clap = { version = "4.5", features = ["derive", "env"] }
clap_complete = "4.5"

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Environment variables
dotenvy = { workspace = true }

# UUID for session/agent IDs
uuid = { workspace = true }

# Chrono for timestamps
chrono = { workspace = true }

# Interactive input
dialoguer = "0.11"

# Terminal rendering (shared by CLI and Studio)
termimad = "0.31"
indicatif = "0.17"
owo-colors = "4"

# Database
rusqlite = { workspace = true }

# REPL / line editing (CLI mode)
rustyline = { version = "17", features = ["with-file-history"] }

# XDG paths
directories = "6"

# ── Studio-only dependencies (gated by "studio" feature) ──

# TUI framework
crossterm = { version = "0.28", features = ["event-stream"], optional = true }
ratatui = { workspace = true, optional = true }

# Web server (for embedded dashboard)
axum = { workspace = true, optional = true }
tower = { workspace = true, optional = true }
tower-http = { workspace = true, optional = true }

# Home directory detection (for TUI path shortener)
dirs = { version = "6", optional = true }

# Unicode character width calculation (for TUI)
unicode-width = { version = "0.2", optional = true }

# Gitignore-aware file traversal (for TUI autocomplete)
ignore = { version = "0.4", optional = true }

# TLS support (optional, for dashboard remote access)
axum-server = { version = "0.7", features = ["tls-rustls"], optional = true }

# Self-signed certificate generation (optional, for development TLS)
rcgen = { version = "0.13", optional = true }

[dev-dependencies]
tempfile = "3"
tower = { workspace = true }
http-body-util = "0.1"
