[package]
name = "grid-desktop"
edition.workspace = true
version.workspace = true
description = "Grid Desktop - Native desktop application wrapping Grid Dashboard"

[[bin]]
name = "grid-desktop"
path = "src/main.rs"

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-single-instance = "2"
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
grid-cli = { path = "../grid-cli", features = ["studio"] }
grid-engine = { workspace = true }
grid-types = { workspace = true }
axum = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
reqwest = { workspace = true }

[build-dependencies]
tauri-build = { version = "2", features = [] }
