[package]
name = "octo-cli"
edition.workspace = true
version.workspace = true
description = "Octo CLI - Local CLI for interacting with Octo agents"

[[bin]]
name = "octo"
path = "src/main.rs"

[features]
default = []

[dependencies]
# Internal crates
octo-types = { workspace = true }
octo-engine = { workspace = true }
octo-sandbox = { workspace = true }

# Async runtime
tokio = { workspace = true, features = ["full"] }
futures-util = { workspace = true }

# CLI parsing
clap = { version = "4.5", features = ["derive", "env"] }
clap_complete = "4.5"

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Environment variables
dotenvy = { workspace = true }

# UUID for session/agent IDs
uuid = { workspace = true }

# Chrono for timestamps
chrono = { workspace = true }

# Interactive input
dialoguer = "0.11"

# Terminal rendering
termimad = "0.31"
indicatif = "0.17"
owo-colors = "4"
crossterm = "0.28"

# Database
rusqlite = { workspace = true }
