[package]
name = "octo-cli"
edition.workspace = true
version.workspace = true
description = "Octo CLI - Local CLI for interacting with Octo agents"

[lib]
name = "octo_cli"
path = "src/lib.rs"

[[bin]]
name = "octo"
path = "src/main.rs"

[features]
default = []
# Enable all heavy features (WASM, Docker, PDF) for production builds
full = ["octo-engine/full"]
dashboard-tls = ["axum-server", "rcgen"]

[dependencies]
# Internal crates
octo-types = { workspace = true }
octo-engine = { workspace = true }
octo-sandbox = { workspace = true }
octo-eval = { path = "../octo-eval" }

# Async runtime
tokio = { workspace = true, features = ["full"] }
futures-util = { workspace = true }
async-trait = { workspace = true }

# CLI parsing
clap = { version = "4.5", features = ["derive", "env"] }
clap_complete = "4.5"

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Environment variables
dotenvy = { workspace = true }

# UUID for session/agent IDs
uuid = { workspace = true }

# Chrono for timestamps
chrono = { workspace = true }

# Interactive input
dialoguer = "0.11"

# Terminal rendering
termimad = "0.31"
indicatif = "0.17"
owo-colors = "4"
crossterm = { version = "0.28", features = ["event-stream"] }
ratatui = { workspace = true }

# Database
rusqlite = { workspace = true }

# REPL / line editing
rustyline = { version = "17", features = ["with-file-history"] }

# XDG paths
directories = "6"

# Home directory detection (for path shortener)
dirs = "6"

# Unicode character width calculation
unicode-width = "0.2"

# Gitignore-aware file traversal (for autocomplete)
ignore = "0.4"

# Web server (for embedded dashboard)
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }

# TLS support (optional, for dashboard remote access)
axum-server = { version = "0.7", features = ["tls-rustls"], optional = true }

# Self-signed certificate generation (optional, for development TLS)
rcgen = { version = "0.13", optional = true }

[dev-dependencies]
tempfile = "3"
tower = { workspace = true }
http-body-util = "0.1"
