[package]
name = "octo-engine"
edition.workspace = true
version.workspace = true

[dependencies]
octo-types = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
futures-util = { workspace = true }
reqwest = { workspace = true }
urlencoding = { workspace = true }
bytes = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
glob = "0.3"
rusqlite = { workspace = true }
tokio-rusqlite = { workspace = true }
sqlx = { workspace = true }
ulid = { workspace = true }
bincode = { workspace = true }
dashmap = { workspace = true }
serde_yaml = { workspace = true }
notify = { workspace = true }
notify-debouncer-mini = { workspace = true }
rmcp = { workspace = true }
hex = "0.4"
sha2 = "0.10"
hmac = "0.12"
subtle = "2.5"
jsonwebtoken = "9"
thiserror = { workspace = true }
cron = "0.15"

# Secret Manager
aes-gcm = "0.10"
argon2 = "0.5"
zeroize = { version = "1.7", features = ["derive"] }
rand = "0.8"
keyring = { version = "3", optional = true }
regex = "1"

[features]
default = ["sandbox-wasm", "sandbox-docker"]
sandbox-wasm = ["dep:wasmtime", "dep:wasmtime-wasi", "dep:base64"]
sandbox-docker = ["dep:bollard", "dep:base64"]
keyring = ["dep:keyring"]

[dependencies.wasmtime]
version = "25"
optional = true

[dependencies.wasmtime-wasi]
version = "25"
optional = true

[dependencies.bollard]
version = "0.18"
optional = true

[dependencies.base64]
version = "0.22"
optional = true

[dev-dependencies]
tempfile = "3"
