[package]
name = "octo-eval"
edition.workspace = true
version.workspace = true

[[bin]]
name = "octo-eval"
path = "src/main.rs"

[dependencies]
octo-types = { workspace = true }
octo-engine = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
futures-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
dotenvy = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
tempfile = "3"
toml = { workspace = true }
regex = "1"
reqwest = { workspace = true }

[dev-dependencies]
