[package]
name = "octo-platform-server"
edition.workspace = true
version.workspace = true

[dependencies]
octo-types = { workspace = true }
octo-engine = { workspace = true }
octo-sandbox = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
axum-extra = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dotenvy = { workspace = true }
dashmap = { workspace = true }
uuid.workspace = true
futures-util = { workspace = true }
tokio-stream = { workspace = true }
chrono.workspace = true
rusqlite = { workspace = true }
# JWT authentication
jsonwebtoken = "9"
# Password hashing
argon2 = "0.5"
# Random for salt generation
rand = "0.8"
# Error handling
thiserror = { workspace = true }
