[package]
name = "octo-server"
edition.workspace = true
version.workspace = true

[dependencies]
octo-types = { workspace = true }
octo-engine = { workspace = true }
octo-sandbox = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
axum-extra = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dotenvy = { workspace = true }
dashmap = { workspace = true }
uuid = { workspace = true }
futures-util = { workspace = true }
tokio-stream = { workspace = true }
