[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hermes-runtime"
version = "0.1.0"
description = "[DEPRECATED 2026-04-14, see ADR-V2-017] Grid EAASP L1 Runtime — hermes-agent T2 Aligned adapter. Frozen due to fork+grpc+auxiliary_client/monkey-patch/session-lifecycle systemic issues. Replaced by goose (Phase 2.5 W1) + nanobot (Phase 2.5 W2)."
requires-python = ">=3.11"
dependencies = [
  "grpcio>=1.80.0,<2",
  "grpcio-tools>=1.80.0,<2",
  "protobuf>=6.31.1,<7",
  "python-dotenv>=1.0.0,<2",
  "httpx>=0.27,<1",
  "mcp>=1.2",
]

[project.optional-dependencies]
dev = ["pytest>=9.0.0,<10", "pytest-asyncio>=1.0.0,<2"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
