[project]
name = "nanobot-runtime"
version = "0.1.0"
description = "EAASP L1 Runtime — Python minimal-real-runtime over OpenAI-compatible endpoints"
requires-python = ">=3.12"
dependencies = [
    "grpcio>=1.70.0",
    "grpcio-tools>=1.70.0",
    "protobuf>=5.0",
    "httpx>=0.27",
    "pydantic>=2.5",
    "loguru",
    "anyio>=4.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[project.scripts]
nanobot-runtime = "nanobot_runtime.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nanobot_runtime"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
