[project]
name = "eaasp-cli-v2"
version = "0.1.0"
description = "EAASP v2.0 Developer CLI"
requires-python = ">=3.12"
dependencies = [
  "typer>=0.12",
  "httpx>=0.27",
  "rich>=13",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.24",
  "respx>=0.21",
  "ruff>=0.6",
]

[project.scripts]
eaasp = "eaasp_cli_v2.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/eaasp_cli_v2"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
