[project]
name = "eaasp-l2-memory-engine"
version = "0.1.0"
description = "EAASP v2.0 L2 Memory Engine — Evidence anchors + versioned memory files + hybrid retrieval"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "aiosqlite>=0.20",
    "pydantic>=2.8",
    "httpx>=0.27",
    "mcp>=1.2",
    "starlette>=0.36",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.6",
]

[project.scripts]
eaasp-l2-memory-engine = "eaasp_l2_memory_engine.main:run"
eaasp-l2-memory = "eaasp_l2_memory_engine.mcp_server:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/eaasp_l2_memory_engine"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
