[package]
name = "eaasp-mcp-orchestrator"
edition.workspace = true
version.workspace = true
description = "EAASP L2 MCP Orchestrator — YAML-driven MCP server lifecycle management"

[dependencies]
axum = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
clap = { version = "4", features = ["derive", "env"] }
tower-http = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
reqwest = { workspace = true }
