[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "eaasp-session-manager"
version = "0.1.0"
description = "EAASP L4 Session Manager — four-plane architecture for human-agent collaboration"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "httpx>=0.27",
    "aiosqlite>=0.21",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[tool.hatch.build.targets.wheel]
packages = ["src/eaasp_session"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
