[package]
name = "eaasp-skill-registry"
edition.workspace = true
version.workspace = true
description = "EAASP L2 Skill Registry — REST API for skill asset management"

[dependencies]
axum = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
rusqlite = { workspace = true }
tokio-rusqlite = { workspace = true }
git2 = "0.19"
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
clap = { version = "4", features = ["derive", "env"] }
tower-http = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
reqwest = { workspace = true }
tempfile = "3"
tower = { workspace = true, features = ["util"] }
