[project]
name = "mock-scada"
version = "0.1.0"
description = "EAASP v2.0 Phase 0 — Mock SCADA MCP stdio server for threshold-calibration e2e verification"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[project.scripts]
mock-scada = "mock_scada.server:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mock_scada"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
